[package]
name = "plotters-gtk-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.16"
gtk4 = "0.5.2"
gio = "0.16"

[dependencies.plotters]
git = "https://github.com/plotters-rs/plotters"
default_features = false
features = ["surface_series"]

[dependencies.plotters-cairo]
git = "https://github.com/mneilly/plotters-cairo.git"
branch = "mneilly/gtk4-changes"
